created migrations for comments